Fixed layout issue: prizes hidden under register btn on sm screens

--- a/components/ChallengeCard/ChallengeCard.scss
+++ b/components/ChallengeCard/ChallengeCard.scss
@@ -85,6 +85,11 @@ $challenge-radius-4: $corner-radius * 2;
     @include xs {
       margin-right: 0;
     }
+    &.with-register-button {
+      @include sm {
+        margin-right: 180px;
+      }
+    }
     a {
       line-height: $challenge-space-20;
       @include xs {
@@ -145,6 +150,11 @@ $challenge-radius-4: $corner-radius * 2;
       margin-top: $challenge-space-20;
       padding-left: $challenge-space-50;
       top: 0;
+    }
+    &.with-register-button {
+      @media (min-width: #{$sm-width}) and (max-width: #{$lg-width - 1px}) {
+        right: 108px;
+      }
     }
     > span:first-child {
       display: inline-block;
